spacing issues

--- a/opoly/src/App.css
+++ b/opoly/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%);
+  background: linear-gradient(to bottom, rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%);
 }
 
 .pawn-container {
@@ -14,8 +14,7 @@
   align-items: center;
 }
 
-.pawn,
-.player-pawn {
+.pawn, .player-pawn {
   width: 100px;
   height: 100px;
   cursor: pointer;
